<resources>
    <string name="app_name">Dialogs</string>
    <string name="btnAlert">Alert</string>
    <string name="btnDatePicker">Date Picker</string>
    <string name="btnTimePicker">Time Picker</string>
    <string name="btnProgress">Progress</string>
    <string name="btnCustom">Custom</string>
    <string name="title">Title</string>
    <string name="msg">Message</string>
    <string name="btnYes">Yes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnNo">No</string>
    <string name="edtUserName">User Name</string>
    <string name="btnOkay">Okay</string>
</resources>
