<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codekul.dialogs.MainActivity">

    <Button
        android:id="@+id/btnAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAlert"
        android:onClick="alert"/>

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDatePicker"
        android:onClick="datePicker"/>

    <Button
        android:id="@+id/btnTimePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTimePicker"
        android:onClick="timePicker"/>

    <Button
        android:id="@+id/btnProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnProgress"
        android:onClick="progress"/>

    <Button
        android:id="@+id/btnCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCustom"
        android:onClick="custom"/>
</LinearLayout>
